@@ -2,15 +2,21 @@ package scala.cli.integration
 
 import com.eed3si9n.expecty.Expecty.expect
 
+import scala.cli.integration.util.BloopUtil
+
 abstract class CompileTestDefinitions(val scalaVersionOpt: Option[String])
     extends munit.FunSuite with TestScalaVersionArgs {
 
   protected lazy val extraOptions = scalaVersionArgs ++ TestUtil.extraOptions
 
+  private lazy val bloopDaemonDir = BloopUtil.bloopDaemonDir {
+    os.proc(TestUtil.cli, "directories").call().out.text()
+  }
+
   val simpleInputs = TestInputs(
     Seq(
       os.rel / "MyTests.scala" ->
-        """using lib com.lihaoyi::utest::0.7.10
+        """//> using lib "com.lihaoyi::utest::0.7.10"
           |import utest._
           |
           |object MyTests extends TestSuite {
@@ -53,7 +59,7 @@ abstract class CompileTestDefinitions(val scalaVersionOpt: Option[String])
     val inputs = TestInputs(
       Seq(
         os.rel / "Main.scala" ->
-          """using lib "com.lihaoyi::utest:0.7.10"
+          """//> using lib "com.lihaoyi::utest:0.7.10"
             |
             |object Main {
             |  val err = utest.compileError("pprint.log(2)")
@@ -65,8 +71,8 @@ abstract class CompileTestDefinitions(val scalaVersionOpt: Option[String])
             |}
             |""".stripMargin,
         os.rel / "Tests.scala" ->
-          """using lib "com.lihaoyi::pprint:0.6.6"
-            |using target test
+          """//> using lib "com.lihaoyi::pprint:0.6.6"
+            |//> using target.scope "test"
             |
             |import utest._
             |
@@ -96,8 +102,8 @@ abstract class CompileTestDefinitions(val scalaVersionOpt: Option[String])
             |}
             |""".stripMargin,
         os.rel / "Tests.scala" ->
-          """using lib "com.lihaoyi::utest:0.7.10"
-            |using target test
+          """//> using lib "com.lihaoyi::utest:0.7.10"
+            |//> using target.scope "test"
             |
             |import utest._
             |
@@ -231,12 +237,13 @@ abstract class CompileTestDefinitions(val scalaVersionOpt: Option[String])
     inputs: TestInputs
   ) =
     inputs.fromRoot { root =>
-      os.proc(TestUtil.cs, "launch", "--jvm", bloopJvm, "bloop", "--", "exit").call(
+      val bloop = BloopUtil.bloop(Constants.bloopVersion, bloopDaemonDir, jvm = Some(bloopJvm))
+      bloop("exit").call(
         cwd = root,
         check = false,
         stdout = os.Inherit
       )
-      os.proc(TestUtil.cs, "launch", "--jvm", bloopJvm, "bloop", "--", "about").call(
+      bloop("about").call(
         cwd = root,
         check = false,
         stdout = os.Inherit
@@ -254,7 +261,7 @@ abstract class CompileTestDefinitions(val scalaVersionOpt: Option[String])
   if (TestUtil.canRunNative && actualScalaVersion.startsWith("2.12"))
     test("JVM options only for JVM platform") {
       val inputs = TestInputs(
-        Seq(os.rel / "Main.scala" -> "// using java-opt -Xss1g")
+        Seq(os.rel / "Main.scala" -> "//> using `java-opt` \"-Xss1g\"")
       )
       inputs.fromRoot { root =>
         val res = os.proc(TestUtil.cli, "compile", extraOptions, "--native", ".").call(
@@ -266,4 +273,82 @@ abstract class CompileTestDefinitions(val scalaVersionOpt: Option[String])
 
       }
     }
+
+  test("Manual javac SemanticDB") {
+    val inputs = TestInputs(
+      Seq(
+        os.rel / "foo" / "Test.java" ->
+          """package foo;
+            |
+            |public class Test {
+            |  public static void main(String[] args) {
+            |    System.err.println("Hello");
+            |  }
+            |}
+            |""".stripMargin
+      )
+    )
+    inputs.fromRoot { root =>
+      val compilerPackages = Seq(
+        "com.sun.tools.javac.api",
+        "com.sun.tools.javac.code",
+        "com.sun.tools.javac.model",
+        "com.sun.tools.javac.tree",
+        "com.sun.tools.javac.util"
+      )
+      val exports = compilerPackages
+        .flatMap { pkg =>
+          Seq("-J--add-exports", s"-Jjdk.compiler/$pkg=ALL-UNNAMED")
+        }
+        .flatMap(opt => List("--javac-opt", opt))
+      val javaSemDbOptions = Seq(
+        "--javac-plugin",
+        "com.sourcegraph:semanticdb-javac:0.7.4",
+        "--javac-opt",
+        s"-Xplugin:semanticdb -sourceroot:$root -targetroot:javac-classes-directory"
+      ) ++ exports
+      os.proc(TestUtil.cli, "compile", extraOptions, javaSemDbOptions, ".")
+        .call(cwd = root)
+
+      val files = os.walk(root / Constants.workspaceDirName)
+      val semDbFiles = files
+        .filter(_.last.endsWith(".semanticdb"))
+        .filter(!_.segments.exists(_ == "bloop-internal-classes"))
+      expect(semDbFiles.length == 1)
+      val semDbFile = semDbFiles.head
+      expect(
+        semDbFile.endsWith(os.rel / "META-INF" / "semanticdb" / "foo" / "Test.java.semanticdb")
+      )
+    }
+  }
+
+  test("Javac SemanticDB") {
+    val inputs = TestInputs(
+      Seq(
+        os.rel / "foo" / "Test.java" ->
+          """package foo;
+            |
+            |public class Test {
+            |  public static void main(String[] args) {
+            |    System.err.println("Hello");
+            |  }
+            |}
+            |""".stripMargin
+      )
+    )
+    inputs.fromRoot { root =>
+      os.proc(TestUtil.cli, "compile", extraOptions, "--semantic-db", ".")
+        .call(cwd = root)
+
+      val files = os.walk(root / Constants.workspaceDirName)
+      val semDbFiles = files
+        .filter(_.last.endsWith(".semanticdb"))
+        .filter(!_.segments.exists(_ == "bloop-internal-classes"))
+      expect(semDbFiles.length == 1)
+      val semDbFile = semDbFiles.head
+      expect(
+        semDbFile.endsWith(os.rel / "META-INF" / "semanticdb" / "foo" / "Test.java.semanticdb")
+      )
+    }
+  }
 }
